<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:background="@drawable/back"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:fadeScrollbars="true"
	>								<!-- 声明垂直分布的线性布局 -->
	   <LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="50dip"
		android:background="@drawable/upbar0"
		>
	    </LinearLayout>
	  <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:scrollbars="vertical">
               <LinearLayout
		          android:orientation="vertical"
		          android:layout_width="fill_parent"
		          android:layout_height="fill_parent"
		            >
		 <TextView 
			android:text="@string/tvUid"
			android:layout_width="100px"
			style="@style/text"
			android:layout_height="wrap_content"
			android:layout_margin="10dip"
			/>
		<EditText
			android:id="@+id/etUid"
			android:singleLine="true"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dip"
			android:layout_marginRight="10dip"
			android:layout_marginBottom="10dip"
			/>	
		<TextView 
			android:text="@string/tvPwd"
			android:layout_width="100px"
			style="@style/text"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dip"
			android:layout_marginRight="10dip"
			android:layout_marginBottom="10dip"
			/>
		<EditText
			android:id="@+id/etPwd"
			android:singleLine="true"
			android:password="true"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dip"
			android:layout_marginRight="10dip"
			android:layout_marginBottom="10dip"
			/>									
		   <Button
		    android:layout_gravity="center_horizontal"
			android:id="@+id/btnLogin"
			style="@style/button"
			android:layout_width="120px"
			android:layout_height="wrap_content"
			android:text="@string/btnLogin"
			android:background="@drawable/regist_weibo_n"
			/>
			</LinearLayout>
			</ScrollView>
</LinearLayout>
